# breslinmathracer

./: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  MathInput.cpp  MathInput.h  MathProblems.cpp  MathProblems.h  MathRacer.cpp  MathRacer.h  MathRacerController.h  OgreMathProblems.cpp  OgreMathProblems.h  ProjectHome.md  SinbadCharacterController.h  TutorialApplication.cpp  TutorialApplication.h  bender.cpp  build.xml  createBreslinJar_B.bat  createNativeWindowJar_A.bat  dist_E.bat  ideas.txt  index.html  keytool_C.bat  params.json  readme.txt  run  sign_D.bat  todo.txt
aclient/: CMakeLists.txt  game.cpp  game.h  main.cpp  networkedGame.cpp  networkedGame.h
aserver/: CMakeLists.txt  main.cpp  network.cpp  server.h
bClient/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  ClientSinbadCharacterController.h  Tutorial4.cpp  client.cpp  client.h  common.h  network.cpp
bServer/: CMakeLists.txt  ServerSinbadCharacterController.h  common.h  main.cpp  network.cpp  network.h  server.cpp  server.h
baseapplication/: baseApplication.cpp
basegame/: baseGame.cpp  baseGame.h  clientSideBaseGame.cpp  clientSideBaseGame.h  serverSideBaseGame.cpp  serverSideBaseGame.h
charactercontrollers/: Character.cpp  Character.h  CharacterController.cpp  CharacterController.h  MathRacerController.h  SinbadCharacterController.h  SkeletalAnimation.cpp  SkeletalAnimation.h
client/: client.cpp  client.h  clientSideClient.cpp  clientSideClient.h  serverSideClient.cpp  serverSideClient.h
command/: clientSideCommand.cpp  clientSideCommand.h  command.cpp  command.h  serverSideCommand.cpp  serverSideCommand.h
dclient/: CMakeLists.txt  game.cpp  game.h  main.cpp  networkedGame.cpp  networkedGame.h  polyNetworkedGame.cpp  polyNetworkedGame.h  soloGame.cpp  soloGame.h  soloNetworkedGame.cpp  soloNetworkedGame.h
dreamsock/: dreamClient.cpp  dreamClient.h  dreamConsole.cpp  dreamConsole.h  dreamLinuxSock.cpp  dreamLinuxSock.h  dreamMessage.cpp  dreamMessage.h  dreamServer.cpp  dreamServer.h  dreamSock.cpp  dreamSock.h  dreamWinSock.cpp  dreamWinSock.h
dserver/: network.h
game/: clientSideGame.cpp  clientSideGame.h  game.cpp  game.h  serverSideGame.cpp  serverSideGame.h
hclient/: CMakeLists.txt
hserver/: CMakeLists.txt  main.cpp  main.h
itembank/1/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html
itembank/2/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html
itembank/3/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html
itembank/4/: 1.html  10.html  11.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
itembank/4/4_files/: functions.js
itembank/4/7_files/: overlib_mini.js
itembank/4/g/: 1.html  2.html
itembank/4/md/: 1.html  2.html  3.html
itembank/5/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
itembank/6/: 1.html  10.html  11.html  12.html  13.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
itembank/7/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
itembank/7/5_files/: calendar-blue.css
itembank/8/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
itembank/k/: 1.html  2.html  3.html  4.html  5.html  6.html
itembank/k/3_files/: jquery.css
jclient/: CMakeLists.txt  Tutorial4.cpp  client.cpp  client.h  network.cpp
jserver/: CMakeLists.txt  main.cpp  network.cpp  network.h  server.cpp  server.h
math/: vector3D.cpp  vector3D.h
nclient/: CMakeLists.txt  main.cpp
network/: clientSideNetwork.cpp  clientSideNetwork.h  network.cpp  network.h  serverSideNetwork.cpp  serverSideNetwork.h
ngame/: clientSideGame.cpp  clientSideGame.h  clientSideNetworkedGame.cpp  clientSideNetworkedGame.h  clientSideNonNetworkedGame.cpp  clientSideNonNetworkedGame.h  serverSideGame.cpp  serverSideGame.h  serverSideNetworkedGame.cpp  serverSideNetworkedGame.h
nserver/: CMakeLists.txt  main.cpp  main.h
shape/: clientSideShape.cpp  clientSideShape.h  serverSideShape.cpp  serverSideShape.h  shape.cpp  shape.h
src/: 5ththresholds.txt  Manifest.txt  build.sh  compile.sh  dev_build.sh  erm.sh  error_log.sh  error_query.txt  flowchart.dia  howto.txt  index.html  index_dev.html  jamesanthonybreslin.sql  main.js  main_103.html  main_115.html  main_71.html  main_88.html  main_localhost.html  min.php  music.sh  package.json  query.sh  quick.sh  rebuild.sh  run.sh  sed_command  setup.sh  test.html  todo  udp.js  update_server.sh
src/breslin/: uml.dia
src/breslin/baseentity/: baseEntity.cpp  baseEntity.h
src/breslin/clientside/: build.sh  run.sh  run_103.sh  run_115.sh  run_localhost.sh  run_maindesk.sh  run_school.sh  runi.sh  runserver1.sh  runserver1_lan.sh  runserver1_school.sh  runtp.sh
src/breslin/fsm/: state.h  stateMachine.h
src/breslin/letter/: letter.cpp  letter.h
src/breslin/mailman/: mailMan.cpp  mailMan.h
src/breslin/math/: Vector3D.java  vector3D.cpp  vector3D.h  vector_3d.php
src/breslin/message/: message.cpp  message.h
src/breslin/serverside/: build.sh  gold.sql  run.sh  run_debug.sh
src/breslin/utility/: utility.cpp  utility.h
src/breslin/vclient/: CMakeLists.txt  main.cpp
src/breslin/vserver/: CMakeLists.txt  main.cpp
src/css/: green_block.css
src/erm/: readme.txt
src/images/helicopter/: Thumbs.db
src/src/animation/: animation.php  animation_advanced.php
src/src/application/: application.php  core_application.php
src/src/basic/: basic.html  basic.php  basic_functions.html
src/src/bounds/: bounds.php
src/src/circle/: circle.php
tclient/: BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  Tutorial4.cpp  Tutorial4.h  client.cpp  client.h  network.cpp  network.h
tdreamsock/: dreamLinuxSock.cpp  dreamSock.cpp  dreamSockGlobal.cpp  dreamSockLog.cpp  dreamSockLog.h  dreamWinSock.cpp
tests/: 5.nf.b.6pdf
tserver/: CMakeLists.txt  dreamSock.h  dreamSock.lib  main.cpp  server.cpp
tuts/: BaseApplication.cpp  BasicTutorial05.cpp  BasicTutorial05.h  BasicTutorial4.cpp  BasicTutorial4.h  CMakeLists.txt  ITutorial01.cpp  ITutorial01.h  TutorialApplication.cpp
(+1226 files in other folders)
